<resources>
    <!--APP名字-->
    <string name="app_name">公务员考试</string>
    <!--注册/登录/密码-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="text_now_login">正在登录...</string>
    <string name="forget_pwd">忘记密码</string>
    <!--首页-->
    <string name="activity_exam">整卷</string>
    <string name="activity_yanyu">言语理解与表达</string>
    <string name="activity_shul">数量关系</string>
    <string name="activity_pand">判断推理</string>
    <string name="activity_ziliao">资料分析</string>
    <string name="activity_changshi">常识判断</string>
    <!--知识-->
    <string name="activity_history">历史沿革</string>
    <string name="activity_basic">基本形式</string>
    <string name="activity_process">考试流程</string>
    <string name="activity_announcement">招考公告</string>
    <string name="activity_time">考试时间</string>
    <string name="activity_institution">录用机关</string>
    <string name="activity_secret">国考揭秘</string>
    <string name="activity_title">申论题目</string>
    <!--知识activity-->
    <string name="ac_history">
        起源期\n
夏商周时代，没有严格意义上的公务员，国家的官员主要是国王的亲戚，他们的官职要世袭。到了春秋时代，诸侯国林立，君主也希望更多的人才参与管理，孔子提出了一个口号：“学而优则仕”。孔子的口号，宣布了建设高素质、高觉悟、高效率的管理与服务团队的主张，确定了公务员制度的基本发展方向。
秦始皇统一天下之后，公务员制度基本建立起来了，但是还没有严格的考试，基本上是以面试为主，岗前培训为辅；而岗前培训的基本原则，就是“以吏为师”。
秦朝之后，中国经历了一段公务员制度的波动期。一个阶段是贵族制度，外戚干政，整个公务员体系受到沉重打击，考试自然无法正常开展；另一个阶段是战争时期，一切以战争为中心，读书人很难找到用武之地。 [1]\n
发展期\n
唐朝将隋朝建立的科举考试形式常规化，基本确立了通过科举考试才能做官的原则。然而制度创立初期，时常受到非理性因素干扰。在科举考试之前考生常常要去拜访考官。
宋朝，皇帝在考官的选择和考试命题方面进行了严格的控制，对考试的公平性更是设置了各种措施。
明朝，开国皇帝朱元璋主张确立一套严格的选才标准，让文化水平不高的人也能评阅试卷，也能主持考试。这一原则，正和现代公务员考试的精神符合，那就是考试可以不依靠人的因素而确立评判标准。明代有《状元及第》，朱元璋颁布《六条圣谕》匾。 [2]\n
成熟期\n
1982年，原劳动人事部制定下发《吸收录用干部问题的若干规定》，强调国家机关、企事业单位吸收录用干部，实行公开招收，进行德、智、体全面考核，坚持竞争考试、择优录用。从此，考试进入干部录用程序中。
1987年，党的十三大决定建立国家公务员制度，要求在选拔任用方面尽量增加透明程度、开放程度和群众参与程度，要求引入竞争机制，在更大范围内创造一种有利于优秀人才脱颖而出的局面。
1988年，七届人大一次会议提出，今后各级政府录用公务员，要通过公开考试，择优选拔。
1989年，原人事部在监察部、审计署等6部门进行公务员考试录用试点。
1993年，《国家公务员暂行条例》颁布。原人事部于次年下发《国家公务员录用暂行规定》，要求录用国家公务员，贯彻公开、平等、竞争、择优的原则，按照德才兼备的标准，采取考试与考核相结合的方式进行。公务员考录制度正式建立。
2005年，《中华人民共和国公务员法》颁布，明确规定录用担任主任科员以下及其他相当职务层次的非领导职务公务员，采取公开考试、严格考察、平等竞争、择优录取的办法。
2007年，中组部、原人事部下发了《关于印发〈公务员录用规定（试行）〉的通知》；同日，原人事部下发《公务员录用规定（试行）》。《规定》对公务员考录的原则、报考条件、招考程序和方法以及纪律与监督等做出全面规定，进一步完善了考录制度。 [3]
    </string>
    <string name="ac_basic">
        中国公务员正规统一都叫国家公务员，不管是中央还是地方都是国家公务员，具体才分为中央、国家机关公务员和地方国家公务员。\n
公务员考试分为中央和地方两种形式：\n
国家公务员考试是指：中央、国家机关以及中央国家行政机关派驻机构、垂直管理系统所属机构录用机关工作人员和国家公务员的考试。\n
地方的公务员考试是指：地方各级党政机关，社团等为招录机关工作人员和国家公务员而组织进行的各级地方性考试。\n
中央和地方考试单独进行，不存在从属关系，考生根据自己要报考的政府机关部门选择要参加的考试，也可同时报考，相互之间不受影响。\n
中央公务员考试和地方考试性质一样，都属于招录考试，考生填报相应的职位进行考试，一旦被录取便成为该职位的工作人员。具体公务员政策可参看国家公务员网的相关政策。\n
地方公务员考试有资格考试和招录考试两种，资格考试即成绩合格者发给公务员资格证书，考生可凭此资格证在市、区、县等国家机关求职，如北京市。有的需要再参加具体部门的一些考试，有的直接面试考核。绝大多数地方公务员考试采用的是招录考试的方式，考生选择职位报名参加考试，考上后就直接录取为该部门的公务员，和中央公务员考试程序一样。
    </string>
    <string name="ac_process">
        报考\n
条件：\n
（一）具有中华人民共和国国籍；\n
（二）18周岁以上、35周岁以下，应届毕业硕士研究生和博士研究生（非在职）年龄可放宽到40周岁以下；\n
（三）拥护中华人民共和国宪法；\n
（四）具有良好的品行；\n
（五）具有正常履行职责的身体条件；\n
（六）具有符合职位要求的工作能力；\n
（七）具有大专以上文化程度；\n
（八）具备中央公务员主管部门规定的拟任职位所要求的其他资格条件。 [4] \n
流程：\n
1．浏览报考信息（考试公告、考试大纲、职位条件一览表）\n
2．选定职位（专业上有疑义，可咨询所报单位）\n
3．开始网报\n
（1）登陆网报网站及页面\n
（2）填写报名信息并上传照片\n
（3）等待审核\n
（4）审核通过后网上缴费\n
（5）报名成功\n
注：当下大多数省市均采取网上报名，并在网上直接打印准考证，现场确认报名的方式。\n
考试方式\n
各个地方的考试科目都是地方自定的，一般都有笔试和面试。笔试科目各有不同，北京、山东、浙江、上海和广东等省的笔试科目为《行政职业能力测验》和《申论》。要报地方公务员考试的同学要注意查阅当地政府公布的招考简章，以便有针对性地进行复习。当下就公务员考试改革的趋势来看，倾向于向考《行政职业能力测验》和《申论》两科靠拢。\n
笔试\n
中央、国家机关的公务员考试包括笔试（公共科目、专业科目）和面试，以前公共科目笔试按A、B类职位分别进行。A类职位笔试公共科目为《行政职业能力测验》（A）和《申论》；B类职位笔试公共科目为《行政职业能力测验》（B）；专业科目笔试和面试时间由招考部门自行通知。从2006年开始，A、B类都要考一样的科目，就是《行政职业能力测验》和《申论》，只不过《行政职业能力测验》分别命题。 [5] \n
国家公务员考试按中央机关招录职位区分为三类，在考试内容和招录政策上有所区别：\n
◆中央机关及其省级直属机构\n
◆市(地)级以下直属机构\n
◆专业性较强的部门（单位） [4] \n
笔试包括公共科目和专业科目。公共科目由中央公务员主管部门统一确定，专业科目由省级以上公务员主管部门根据需要设置。\n
面试\n
面试比例与计划录用人数比例一般有3：1、4：1、5：1三种，只有通过笔试后，按录用人数与面试比例确认笔试成绩排名前几位的才有面试资格，进入面试关。\n
面试改革\n
2014年的公务员面试中，湖南实行省市县乡四级联考集中面试。在面试进行前的半小时，考官、考生分别“抽签”决定考场，考官100%异地交流。面试过程中考生不准透露自己的名字，仅交代考号。考生考完后当场宣布成绩，用公开透明的方式杜绝一切“猫腻” [6]  。\n
体检和考察\n
面试和专业科目考试结束后，将按照综合成绩从高到低的顺序确定进入体检和考察的人选。\n
录用\n
拟录用人员由招录机关按规定的程序和标准从考试成绩、考察情况和体检结果合格的人员中综合考虑，择优确定。2014年，湖南公务员面试考完当场宣布考生成绩 [6]  。
    </string>
    <string name="ac_announcement">
        制定和发布招考公告是报名前的首要工作。用人部门关于考试录用的主要信息，都是通过公告告知社会的。\n
内容\n
公务员录用招考公告主要包括以下内容：\n
（1）招考范围、招考对象和条件；\n
（2）录用单位、职位与计划（名额）；\n
（3）考试录用的方法和程序；\n
（4）报名时间、地点及报名时应审查的证件；\n
（5）笔试的科目、时间和地点；\n
（6）面试办法；\n
（7）笔试、面试成绩公布办法；\n
（8）录用的程序和方法；\n
（9）其他须向考生说明的事宜。 [7]\n
发布\n
公务员招考公告一般选择知名度高、读者面广、权威性严肃性强的报纸发布，同时要考虑到地域性。例如，国务院各部门如面向全国招考公务员，则应在《人民日报》上发布招考公告：如只限在北京地区招考，则可在《北京日报》或《北京晚报》上发布招考公告。各省、自治区、直辖市政府如面向全省（全自治区）招考公务员，则应在省级报纸发布招考公告；如只限在省、自治区驻地市内招考，则可在驻地市报纸上发布招考公告。\n
招考公告具有法规性质，一经发布，任何单位，任何个人不得违背其内容行事，如有特殊情况需改变或调整其内容时，须由发布公告的部门于报名前在原公布公告报纸上作更正声明。\n
招考公告在文字上简单、明了。有些问题如考试的一些具体要求，可制定《报名须知》在报名处张贴或印发，作为招考公告的辅助说明。 [7]
    </string>
    <string name="ac_time">
        2002年起，中央、国家机关公务员招考工作的时间被固定下来，报名时间在每年10月中旬，考试时间在每年11月的第四个周末。\n
省、直辖市、自治区国家公务员考试时间由各地自行决定并组织实施，部分地区每年在上、下半年各组织一次考试，全国大部分地区每年只考一次，省级以下公务员主管部门不组织开展公务员考试。
    </string>
    <string name="ac_institution">
        国务院人事部门是国家公务员录用的主管机关，负责全国国家公务员录用的综合管理工作，包括：拟定国家公务员录用法规；制定有关的具体政策；指导与监督地方国家行政机关国家公务员录用的管理工作；负责组织国务院各工作部门录用国家公务员的考试和备案工作，某些考试工作可以委托省级政府人事部门承担。\n
省、自治区、直辖市政府人事部门是本行政辖区国家公务员录用的主管机关，负责本行政辖区内国家公务员录用的管理工作。\n
市（地）级以下政府人事部门按照省级政府人事部门的规定，负责本行政辖区内国家公务员录用的有关管理工作。\n
各级政府工作部门按照同级政府人事部门的要求，承担本部门国家公务员录用的有关工作。\n
国家公务员录用考试的服务机构受政府人事部委托，承担某些录用考试具体操作工作。
    </string>
    <string name="ac_secret">
        2014年国考最火的岗位，是国管局政府采购中心采购三处。比较近四年的热门职位，发现近四年最热职位均来自“国务院参照公务员法管理事业单位”，其中有三个职位的机构层级为“中央”级。教育专家指出，相较于中央党群机关“除特殊职位外均要求两年以上工作经历”的严格要求，“国务院参照公务员法管理事业单位”这一系统中部分职位门槛并不高，且享受公务员同等待遇，对于有心报考“中央级”职位的应届毕业考生来说，“曲线救国”、从其他系统“进门”无疑是一个很好的选择。\n
通过对比不难发现，近四年最热职位的基层工作经历均不限，其中三个职位政治面貌无要求，专业范围要求也较广，尤其2013年的“不限专业”，吸引了9000多人报考。因此，招录条件的“少设限”和“不设限”，成为了考生竞相报考的原因。像此次的采购三处副主任科员及以下职位，尽管要求建筑学、土木工程、工程管理专业，与往年最热门职位相比，专业范围相对狭窄，但学历要求为本科或研究生学历、政治面貌不限、工作年限不限，门槛并不高，只要符合专业要求就可报考。\n
国家机关事务管理局中央国家机关政府采购中心也拿出了几个职位招录，但均未“显山露水”。与采购三处副主任科员及以下职位相似的职位为采购监管处主任科员及以下职位，学历要求相同，也限定了专业，不同的是要求具有两年的工作年限，这马上抬高了“门槛”。
    </string>
    <string name="ac_title">
        【背景链接】\n
节日的意义，就在于团圆。千门万户里都有一位母亲，无数次想象着家门被游子敲响的那个甜蜜瞬间。然而，很多被叫作“剩女”或“剩男”的大龄未婚青年，宁可舍弃堆积了整一年甚至数年的蚀骨乡思，因为担心被父母亲友逼嫁逼婚而不愿回家，以逃避婚嫁压力，换取暂时孤独的自由。倚门盼归的慈母意象，足以温暖古今中外，却成了他们试图逃脱的压力。\n
【综合分析】\n
《孟子·离娄上》有言：“不孝有三，无后为大。”从古至今，父母对子女的婚姻大事传宗接代就看的极为重要，父母们有错吗？在他们看来，子女进入婚姻是一生幸福的起点，平时帮不上忙，趁着春节打探情况包括动用社会关系为适龄青年牵线搭桥，无可厚非。而如今30岁上下的青年，赶上史无前例的三碰头时代：第一批进入婚嫁年龄的独生子女，父母的热切期盼高度集中；人口“流动性过剩”则进入第二期，流动劳动力年龄结构大幅下降，不像第一代那样往往是在家乡嫁娶后才远赴异乡求职，而今年轻游子数量大大高于往昔；面对高速发展的社会，社会竞争压力过大，买房买车的经济压力让更多的“剩男”“剩女”对于婚姻望而却步。\n
如何能让游子的回家，才会更加欣然，更加坦然，而不是恐惧或者逃避。首先需要的是解决父母与子女的代沟，需拉近父母与子女的心理距离，促膝长谈彼此的想法。其次是在物欲横流的商业时代，择偶标准也被商业化浪潮裹挟得踉踉跄跄，诸如职位、出身、住房、收入、发展机会甚至身高、外貌的权衡，都似乎成了天经地义，年轻人需树立一种良好的爱情观，正确的价值观。最后需国家深化改革，争取创造更多创业的机会，让年轻人感觉自己存在的价值，享受奋斗的甜美果实。
    </string>
</resources>
