<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_history"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_basic"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_process"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_announcement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_announcement"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_time"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_institution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_institution"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_secret"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D1D1" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:text="@string/activity_title"
        android:textSize="17sp" />

</LinearLayout>